<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/shop"
        android:icon="@drawable/ic_shop_main"
        android:title="@string/shop"
        android:enabled="true"
        app:cnb_iconColor="@color/colorPrimary"
        app:cnb_backgroundColor="@color/colorSecondary"/>

    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"
        app:cnb_iconColor="@color/colorPrimary"
        app:cnb_backgroundColor="@color/colorSecondary"/>


    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_fav_main"
        android:title="@string/favorites"
        app:cnb_iconColor="@color/colorPrimary"
        app:cnb_backgroundColor="@color/colorSecondary"/>

    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_horizontal_ellipses"
        android:title="@string/more_options"
        app:cnb_iconColor="@color/colorPrimary"
        app:cnb_backgroundColor="@color/colorSecondary"/>

</menu>