<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp"
    android:backgroundTint="@color/colorSurface"
    app:shapeAppearance="@style/ShapeAppearance.EsewaMarket.LargeComponent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/emptyCartLogo"
            android:layout_width="146dp"
            android:layout_height="146dp"
            android:layout_gravity="center"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="24dp"
            android:src="@drawable/bmp_empty_cart"
            android:background="@drawable/shape_for_empty_cart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textForEmptyCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_items_in_the_cart_yet"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.EsewaMarket.Headline6"
            android:textColor="@color/text_dark_400"
            android:layout_marginBottom="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emptyCartLogo"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_your_products_to_cart"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.EsewaMarket.Body1"
            android:textColor="@color/text_dark_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textForEmptyCart"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and_they_will_show_here"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.EsewaMarket.Body1"
            android:textColor="@color/text_dark_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:text="@string/continue_shopping"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:textAppearance="@style/TextAppearance.EsewaMarket.Button"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>