<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/colorOnPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout_total"
        android:textColor="@color/text_dark_300"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.EsewaMarket.Body2"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rs"
        android:textColor="@color/text_dark_400"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/TextAppearance.EsewaMarket.SubTitle1"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="52,500.00"
        android:textColor="@color/text_dark_400"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toEndOf="@+id/rs"
        app:layout_constraintTop_toBottomOf="@+id/total"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAppearance="@style/TextAppearance.EsewaMarket.SubTitle1"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ShapeAppearance.EsewaMarket.SmallComponent"
        android:text="@string/checkout"
        android:layout_marginVertical="12dp"
        android:layout_marginEnd="12dp"
        android:textAppearance="@style/TextAppearance.EsewaMarket.Button"/>
</androidx.constraintlayout.widget.ConstraintLayout>