<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.EsewaMarket.DeleteFromCartButton"
        android:backgroundTint="@color/colorOnPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:gravity="center">
            
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/deleteTitle"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/delete_from_cart"
                android:textColor="@color/text_dark_400"
                android:textAppearance="@style/TextAppearance.EsewaMarket.Headline6"
                android:gravity="center"
                android:layout_marginBottom="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/deleteConfirm"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/are_you_sure"
                android:textColor="@color/text_dark_300"
                android:textAppearance="@style/TextAppearance.EsewaMarket.Body2"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/deleteTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelBtn"
                    android:layout_width="148dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="36dp"
                    android:backgroundTint="@color/text_dark_400"
                    android:text="@string/cancel"
                    android:textAppearance="@style/TextAppearance.EsewaMarket.Button"
                    app:shapeAppearance="@style/ShapeAppearance.EsewaMarket.LargeComponent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/deleteConfirm"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="8dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/deleteBtn"
                    android:layout_width="148dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="36dp"
                    android:layout_gravity="end"
                    android:text="@string/delete"
                    android:textAppearance="@style/TextAppearance.EsewaMarket.Button"
                    app:shapeAppearance="@style/ShapeAppearance.EsewaMarket.LargeComponent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/deleteConfirm"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="8dp"/>

            
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>